samples/_failures_safe/1761209611_114e5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86a800c3.c: In function ‘main’:
./samples/SAFE/__tmp_86a800c3.c:135:9: error: expected expression at end of input
  135 |         if (len > 0 && line[len-
      |         ^~
./samples/SAFE/__tmp_86a800c3.c:135:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86a800c3.c:135:9: error: expected declaration or statement at end of input
